2005-04-28  Richard Levitte  <richard@levitte.org>

	* tests/t_automate_select.at: silly ignores not needed any more.

2005-04-28  Richard Levitte  <richard@levitte.org>

	* commands.cc (complete): Don't talk of there really was no
	expansion.

2005-04-28  Richard Levitte  <richard@levitte.org>

	* commands.cc, commands.hh: Selector functions and type are moved
	to...
	* selectors.cc, selectors.hh: ... these files.
	* database.cc, database.hh: Adapt to this change.
	* automate.cc (automate_select): New function, implements
	'automate select'.
	(automate_command): Use it.
	* monotone.texi (Automation): Document it.

	* tests/t_automate_select.at: New test.
	* testsuite.at: Use it.

	* Makefile.am (MOST_SOURCES): reorganise.  Add selectors.{cc,hh}.

2005-04-27  Richard Levitte  <richard@levitte.org>

	* quick_alloc.hh: Define QA_SUPPORTED when quick allocation is
	supported.
	* sanity.hh: Only defined the QA(T) variants of checked_index()
	when QA_SUPPORTED is defined.

2005-04-27  Joel Reed  <joelwreed@comcast.com>

	* work.cc: on rename move attributes as well.
	* tests/t_rename_attr.at: No longer a bug.

2005-04-27  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Working Copy, Commands): Document update_inodeprints.
	* monotone.1: Likewise.

	* tests/t_update_inodeprints.at: New test.
	* testsuite.at: Add it.

2005-04-27  Richard Levitte  <richard@levitte.org>

	* database.cc (selector_to_certname): Add a case for
	commands::sel_cert.

2005-04-27  Richard Levitte  <richard@levitte.org>

	* sanity.hh: Add a couple of variants of checked_index() to
	accomodate for indexes over vector<T, QA(T)>.

	* commands.hh: Add new selector to find arbitrary cert name and
	value pairs.  The syntax is 'c:{name}={value}'.
	* commands.cc (decode_selector): Recognise it.
	* database.cc (complete): Parse it.
	* std_hooks.lua (expand_selector): Add an expansion for it.
	* monotone.texi (Selectors): Document it.

	* tests/t_select_cert.at: Add test.
	* testsuite.at: Use it.
